@@ -23,3 +23,6 @@ remove = Authen::Simple::Adapter
 Authen::Simple = 0
 
 [Author::Plicease::Upload]
+
+[Deprecated]
+
